--- a/app/src/main/res/layout/fragment_detail__user_.xml
+++ b/app/src/main/res/layout/fragment_detail__user_.xml
@@ -1,147 +1,204 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     style="@style/WH_match_parent"
     android:padding="16dp"
     tools:context=".ui.fragment.DetailUserFragment">
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/iv_user_image_detail"
-        android:layout_width="88dp"
-        android:layout_height="88dp"
-        android:src="@mipmap/ic_launcher"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <LinearLayout
-        android:id="@+id/linearLayout2"
-        style ="@style/WH_wrap_content"
-        android:gravity="center"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/tv_name_githup_detail"
-        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/iv_user_image_detail"
-        app:layout_constraintTop_toTopOf="parent">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_container_detail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_editor_absoluteX="16dp">
 
-        <TextView
-            android:id="@+id/tv_val_repository_githup_detail"
-            style="@style/TagDetailNum"
-            tools:text="7000" />
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/iv_user_image_detail"
+                android:layout_width="88dp"
+                android:layout_height="88dp"
+                android:src="@mipmap/ic_launcher"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/tv_repository_githup_detail"
-            style="@style/TagDetail"
-            android:text="@string/text_repositories" />
-    </LinearLayout>
+            <LinearLayout
+                android:id="@+id/linearLayout2"
+                style="@style/WH_wrap_content"
+                android:gravity="center"
+                android:orientation="vertical"
+                app:layout_constraintBottom_toTopOf="@+id/tv_name_githup_detail"
+                app:layout_constraintEnd_toStartOf="@+id/linearLayout"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/iv_user_image_detail"
+                app:layout_constraintTop_toTopOf="parent">
 
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        style="@style/WH_wrap_content"
-        android:gravity="center"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toStartOf="@+id/linearLayout3"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
-        app:layout_constraintTop_toTopOf="@+id/linearLayout2">
+                <TextView
+                    android:id="@+id/tv_val_repository_githup_detail"
+                    style="@style/TagDetailNum"
+                    tools:text="7000" />
 
-        <TextView
-            android:id="@+id/tv_val_follower_githup_detail"
-            style="@style/TagDetailNum"
-            tools:text="6000" />
+                <TextView
+                    android:id="@+id/tv_repository_githup_detail"
+                    style="@style/TagDetail"
+                    android:text="@string/text_repositories" />
+            </LinearLayout>
 
-        <TextView
-            android:id="@+id/tv_follower_githup_detail"
-            style="@style/TagDetail"
-            android:text="@string/text_follower" />
-    </LinearLayout>
+            <LinearLayout
+                android:id="@+id/linearLayout"
+                style="@style/WH_wrap_content"
+                android:gravity="center"
+                android:orientation="vertical"
+                app:layout_constraintEnd_toStartOf="@+id/linearLayout3"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/linearLayout2"
+                app:layout_constraintTop_toTopOf="@+id/linearLayout2">
 
-    <LinearLayout
-        android:id="@+id/linearLayout3"
-        style="@style/WH_wrap_content"
-        android:gravity="center"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/linearLayout"
-        app:layout_constraintTop_toTopOf="@+id/linearLayout">
+                <TextView
+                    android:id="@+id/tv_val_follower_githup_detail"
+                    style="@style/TagDetailNum"
+                    tools:text="6000" />
 
-        <TextView
-            android:id="@+id/tv_val_following_githup_detail"
-            style="@style/TagDetailNum"
-            tools:text="8000" />
+                <TextView
+                    android:id="@+id/tv_follower_githup_detail"
+                    style="@style/TagDetail"
+                    android:text="@string/text_follower" />
+            </LinearLayout>
 
-        <TextView
-            android:id="@+id/tv_following_githup_detail"
-            style="@style/TagDetail"
-            android:text="Following" />
-    </LinearLayout>
+            <LinearLayout
+                android:id="@+id/linearLayout3"
+                style="@style/WH_wrap_content"
+                android:gravity="center"
+                android:orientation="vertical"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/linearLayout"
+                app:layout_constraintTop_toTopOf="@+id/linearLayout">
 
-    <TextView
-        android:id="@+id/tv_name_githup_detail"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:textColor="@color/gray_300"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/iv_share"
-        app:layout_constraintHorizontal_bias="0.812"
-        app:layout_constraintLeft_toLeftOf="@+id/iv_user_image_detail"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/iv_user_image_detail"
-        app:layout_constraintTop_toBottomOf="@+id/iv_user_image_detail"
-        tools:text="Nama" />
+                <TextView
+                    android:id="@+id/tv_val_following_githup_detail"
+                    style="@style/TagDetailNum"
+                    tools:text="8000" />
 
-    <TextView
-        android:id="@+id/tv_company_githup_detail"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:ellipsize="end"
-        android:maxLines="1"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toStartOf="@+id/iv_share"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/iv_user_image_detail"
-        app:layout_constraintTop_toBottomOf="@id/tv_name_githup_detail"
-        tools:text="Company" />
+                <TextView
+                    android:id="@+id/tv_following_githup_detail"
+                    style="@style/TagDetail"
+                    android:text="Following" />
+            </LinearLayout>
 
-    <TextView
-        android:id="@+id/tv_lokasi_githup_detail"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:ellipsize="end"
-        android:maxLines="1"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toStartOf="@+id/iv_share"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/tv_company_githup_detail"
-        app:layout_constraintTop_toBottomOf="@id/tv_company_githup_detail"
-        tools:text="Lokasi" />
+            <TextView
+                android:id="@+id/tv_name_githup_detail"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:textColor="@color/gray_300"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toStartOf="@+id/iv_share"
+                app:layout_constraintHorizontal_bias="0.812"
+                app:layout_constraintLeft_toLeftOf="@+id/iv_user_image_detail"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/iv_user_image_detail"
+                app:layout_constraintTop_toBottomOf="@+id/iv_user_image_detail"
+                tools:text="Nama" />
 
-    <View
-        android:id="@+id/v_line"
-        android:layout_width="0dp"
-        android:layout_height="1dp"
-        android:layout_marginTop="14dp"
-        android:background="@color/gray_soft"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_lokasi_githup_detail" />
+            <TextView
+                android:id="@+id/tv_company_githup_detail"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:textSize="14sp"
+                app:layout_constraintEnd_toStartOf="@+id/iv_share"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/iv_user_image_detail"
+                app:layout_constraintTop_toBottomOf="@id/tv_name_githup_detail"
+                tools:text="Company" />
 
-    <ImageView
-        android:id="@+id/iv_share"
-        android:background="?android:attr/selectableItemBackground"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@android:drawable/ic_menu_share"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_lokasi_githup_detail"
-        app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
-        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
-        app:layout_constraintTop_toTopOf="@+id/tv_name_githup_detail" />
+            <TextView
+                android:id="@+id/tv_lokasi_githup_detail"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:textSize="14sp"
+                app:layout_constraintEnd_toStartOf="@+id/iv_share"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/tv_company_githup_detail"
+                app:layout_constraintTop_toBottomOf="@id/tv_company_githup_detail"
+                tools:text="Lokasi" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <View
+                android:id="@+id/v_line"
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:layout_marginTop="14dp"
+                android:background="@color/gray_soft"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_lokasi_githup_detail" />
+
+            <ImageView
+                android:id="@+id/iv_share"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="?android:attr/selectableItemBackground"
+                android:src="@android:drawable/ic_menu_share"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_lokasi_githup_detail"
+                app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
+                app:layout_constraintStart_toStartOf="@+id/linearLayout3"
+                app:layout_constraintTop_toTopOf="@+id/tv_name_githup_detail" />
+
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/tabs"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                app:layout_constraintTop_toTopOf="@+id/v_line"
+                app:tabTextColor="@color/gray_500"
+                tools:layout_editor_absoluteX="16dp" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintTop_toBottomOf="@+id/cl_container_detail"
+            tools:layout_editor_absoluteX="16dp">
+
+            <androidx.core.widget.NestedScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fillViewport="true"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+                <androidx.viewpager2.widget.ViewPager2
+                    android:id="@+id/view_pager"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:clipToPadding="false" />
+
+            </androidx.core.widget.NestedScrollView>
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</ScrollView>
