add implementasi final

--- a/app/src/main/res/layout/fragment_detail__user_.xml
+++ b/app/src/main/res/layout/fragment_detail__user_.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     style="@style/WH_match_parent"
-    android:padding="16dp"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
     tools:context=".ui.fragment.DetailUserFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -15,6 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
+            android:paddingTop="16dp"
             tools:layout_editor_absoluteX="16dp">
 
             <de.hdodenhof.circleimageview.CircleImageView
