--- a/app/src/main/res/layout/activity_list_user.xml
+++ b/app/src/main/res/layout/activity_list_user.xml
@@ -3,7 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     style="@style/WH_match_parent"
-    android:background="@color/white"
     tools:context=".intent.ListUserActivity">
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
@@ -12,34 +11,58 @@
         android:layout_height="match_parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
 
-
             <com.google.android.material.appbar.AppBarLayout
+                android:id="@+id/appBarLayout_list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/appBarLayout_list"
-                app:layout_constraintTop_toTopOf="parent"
-                android:elevation="4dp">
+                android:elevation="4dp"
+                app:layout_constraintTop_toTopOf="parent">
 
-                <androidx.appcompat.widget.Toolbar
-                    android:id="@+id/tolbar_list"
+                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
-                    app:layout_scrollFlags="scroll|enterAlways">
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
+                    android:padding="10dp">
 
-                    <TextView
-                        android:id="@+id/home_toolbar_tittle"
-                        android:textColor="@color/white"
-                        android:textSize="20sp"
-                        android:fontFamily="@font/segoeui_semibold"
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/cl_tollbar_container"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/app_name" />
+                        android:layout_height="match_parent"
+                        android:paddingHorizontal="11dp">
 
-                </androidx.appcompat.widget.Toolbar>
+                        <TextView
+                            android:id="@+id/home_toolbar_tittle"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/segoeui_semibold"
+                            android:text="@string/app_name"
+                            android:textColor="@color/white"
+                            android:textSize="20sp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <ImageView
+                            android:id="@+id/iv_setting"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/ic_baseline_settings_24"
+                            app:tint="@color/white"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+                </RelativeLayout>
+
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
@@ -48,8 +71,8 @@
                     android:padding="10dp">
 
 
-
                     <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/cl_search_container"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:background="@drawable/bg_home_search"
@@ -114,32 +137,6 @@
                 app:layout_constraintTop_toBottomOf="@+id/appBarLayout_list">
 
 
-                <androidx.core.widget.NestedScrollView
-                    android:id="@+id/nestedScroll"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:fillViewport="true"
-                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-                    tools:layout_editor_absoluteX="0dp"
-                    tools:layout_editor_absoluteY="-83dp">
-
-
-                    <fragment
-                        android:id="@+id/nav_host_fragment_list"
-                        android:name="androidx.navigation.fragment.NavHostFragment"
-                        android:layout_marginTop="112dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginBottom="56dp"
-                        app:defaultNavHost="true"
-                        app:layout_constraintBottom_toTopOf="@id/nav_view"
-                        app:layout_constraintLeft_toLeftOf="parent"
-                        app:layout_constraintRight_toRightOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:navGraph="@navigation/mobile_navigation" />
-
-                </androidx.core.widget.NestedScrollView>
-
                 <ProgressBar
                     android:id="@+id/progressBar"
                     style="?android:attr/progressBarStyle"
@@ -202,5 +199,31 @@
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.core.widget.NestedScrollView
+            android:id="@+id/nestedScroll"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fillViewport="true"
+            app:layout_anchor="@+id/constraintLayout"
+            app:layout_anchorGravity="center"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+
+            <fragment
+                android:id="@+id/nav_host_fragment_list"
+                android:name="androidx.navigation.fragment.NavHostFragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="112dp"
+                android:layout_marginBottom="56dp"
+                app:defaultNavHost="true"
+                app:layout_constraintBottom_toTopOf="@id/nav_view"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:navGraph="@navigation/mobile_navigation" />
+
+        </androidx.core.widget.NestedScrollView>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
