--- a/app/src/main/res/layout/fragment_item_list_user.xml
+++ b/app/src/main/res/layout/fragment_item_list_user.xml
@@ -7,9 +7,7 @@
     android:layout_height="wrap_content"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
-    android:paddingTop="10dp"
-    android:background="?android:attr/selectableItemBackground"
-    >
+    android:paddingTop="10dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/iv_user_image"
@@ -27,7 +25,6 @@
         android:text="Username"
         android:layout_marginStart="16dp"
         android:textSize="20sp"
-        android:textColor="@color/gray_300"
         android:textStyle="bold"
         app:layout_constraintLeft_toRightOf="@id/iv_user_image"
         app:layout_constraintRight_toRightOf="parent"
@@ -51,7 +48,6 @@
         android:layout_width="0dp"
         android:layout_height="1dp"
         android:layout_marginTop="14dp"
-        android:background="@color/gray_soft"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="@id/tv_username_githup"
         app:layout_constraintRight_toRightOf="parent"
