--- a/app/src/main/res/layout/fragment_item_list_user.xml
+++ b/app/src/main/res/layout/fragment_item_list_user.xml
@@ -7,7 +7,8 @@
     android:layout_height="wrap_content"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
-    android:paddingTop="10dp">
+    android:paddingTop="10dp"
+    android:background="?android:attr/selectableItemBackground">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/iv_user_image"
