--- a/app/src/main/res/layout/fragment_item_list_user.xml
+++ b/app/src/main/res/layout/fragment_item_list_user.xml
@@ -49,6 +49,7 @@
         android:layout_width="0dp"
         android:layout_height="1dp"
         android:layout_marginTop="14dp"
+        android:background="@color/gray_soft"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="@id/tv_username_githup"
         app:layout_constraintRight_toRightOf="parent"
