final submition 3 & UI, Unit Testing

--- a/app/src/main/res/layout/activity_list_user.xml
+++ b/app/src/main/res/layout/activity_list_user.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/home"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     style="@style/WH_match_parent"
@@ -53,10 +54,10 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:src="@drawable/ic_baseline_settings_24"
-                            app:tint="@color/white"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:tint="@color/white" />
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -64,6 +65,7 @@
                 </RelativeLayout>
 
                 <RelativeLayout
+                    android:id="@+id/cl_search_container"
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
                     android:focusable="true"
@@ -72,7 +74,7 @@
 
 
                     <androidx.constraintlayout.widget.ConstraintLayout
-                        android:id="@+id/cl_search_container"
+
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:background="@drawable/bg_home_search"
@@ -115,22 +117,12 @@
             </com.google.android.material.appbar.AppBarLayout>
 
 
-            <com.google.android.material.bottomnavigation.BottomNavigationView
-                android:id="@+id/nav_view"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="0dp"
-                android:layout_marginEnd="0dp"
-                android:background="?android:attr/windowBackground"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:menu="@menu/bottom_nav_menu" />
-
-
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/cL_container_fragment"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginTop="56dp"
+                android:layout_marginBottom="56dp"
                 android:orientation="vertical"
                 app:layout_behavior="@string/appbar_scrolling_view_behavior"
                 app:layout_constraintBottom_toTopOf="@+id/nav_view"
@@ -142,7 +134,9 @@
                     android:layout_height="match_parent"
                     android:fillViewport="true"
                     app:layout_anchorGravity="center"
-                    app:layout_behavior="@string/appbar_scrolling_view_behavior">
+                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                    tools:layout_editor_absoluteX="16dp"
+                    tools:layout_editor_absoluteY="-185dp">
 
 
                     <fragment
@@ -150,8 +144,6 @@
                         android:name="androidx.navigation.fragment.NavHostFragment"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_marginTop="112dp"
-                        android:layout_marginBottom="56dp"
                         app:defaultNavHost="true"
                         app:layout_constraintBottom_toTopOf="@id/nav_view"
                         app:layout_constraintLeft_toLeftOf="parent"
@@ -222,6 +214,19 @@
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <com.google.android.material.bottomnavigation.BottomNavigationView
+                android:id="@+id/nav_view"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="0dp"
+                android:layout_marginEnd="0dp"
+                android:background="?android:attr/windowBackground"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:menu="@menu/bottom_nav_menu" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
